fixed chart overlaps, added logo

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,18 +8,25 @@ html, body{
 
 body{
     position: relative;
+    overflow: hidden;
 }
 
-.bkg-holder{
+.bkg{
     background-size: cover;
     background-position: center;
     position: absolute;
     top: 0px;
-    left: 0px;
+    left: 25%;
     width: 100%;
     height: 100%;
     opacity: 0;
     transition-duration: 1s;
+}
+
+.bkg-ev{
+    background-image: url(eV_roster_logo_full_transparent.png);
+    opacity: 1;
+    left:-25%;
 }
 
 .bkg-current{
@@ -51,11 +58,11 @@ body{
     justify-content: center;
     align-content: center;
     flex-grow: 1;
-    margin: 10% 20% 10% 20%;
+    margin: 7.5% 15% 7.5% 15%;
 }
 
 .chart{
-    background-color: rgba(255,255,255,.75);
+    background-color: rgba(255,255,255,.85);
     padding: 10px;
 }
 
